cmake_minimum_required(VERSION 3.0.2)
project(curtis_interface)

# add_compile_options(-std=c++11)

find_package(catkin REQUIRED COMPONENTS
  can_interface
)

catkin_package(
  INCLUDE_DIRS include
  LIBRARIES curtis_interface
  CATKIN_DEPENDS can_interface
#  DEPENDS system_lib
)

include_directories(
  include
  ${catkin_INCLUDE_DIRS}
)

add_library(${PROJECT_NAME}
  src/${PROJECT_NAME}.cpp
)

target_link_libraries(${PROJECT_NAME}
  ${catkin_LIBRARIES}
)

install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
)

install(DIRECTORY include/${PROJECT_NAME}/
  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
)
