<?xml version="1.0"?>
<package format="2">
  <name>curtis_interface</name>
  <version>1.0.0</version>
  <description>This package allows the computer to interact with Curtis controller via CAN bus</description>

  <maintainer email="rgoulartns@gmail.com">Rafael Goulart</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>can_interface</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
